--- a/index.html
+++ b/index.html
@@ -16,35 +16,51 @@
       <div class="container mx-auto flex justify-between items-center">
         <a href="#" class="text-lg font-semibold">my vue</a>
         <ul class="flex space-x-4">
-          <li v-for="link in links">
-            <a href="#" class="hover:text-blue-300">{{link}}</a>
+          <li v-for="(page, index) in pages" key="index">
+            <a
+              :href="page.link.url"
+              :title="`this goes to the ${page.link.text} page`"
+              @click.prevent="activePage = index"
+              class="hover:text-blue-300 nav-link"
+              :class="{ 'text-blue-500': activePage === index }"
+              >{{page.link.text}}</a
+            >
           </li>
         </ul>
       </div>
     </nav>
     <div id="content">
       <!-- alt inde i content er en template -->
-      <h1>{{pageTitle}}</h1>
-      <p>{{message}}</p>
+      <h1>{{pages[activePage].pageTitle}}</h1>
+      <p>{{pages[activePage].message}}</p>
     </div>
     <script>
       Vue.createApp({
         data() {
           return {
-            links: ["Home", "About", "Services", "Contact"],
+            activePage: 0,
+            pages: [
+              {
+                link: { text: "Home", url: "index.html" },
+                pageTitle: "Home Page!",
+                content: "Welcome to the home page",
+              },
+              {
+                link: { text: "About", url: "about.html" },
+                pageTitle: "About Page!",
+                content: "Welcome to the about page",
+              },
+              {
+                link: { text: "Contact", url: "contact.html" },
+                pageTitle: "Contact Page!",
+                content: "Welcome to the contact page",
+              },
+            ],
           };
         },
-      }).mount("nav");
 
-      Vue.createApp({
-        data() {
-          return {
-            pageTitle: "Hello World!",
-            message: "Welcome to Vue",
-          };
-          //   <!-- Denne webpage har to stykker information/data -->
-        },
-      }).mount("#content");
+        //   <!-- Denne webpage har to stykker information/data -->
+      }).mount("body");
       // <!-- Vi har mountet disse informationer på element med id content -->
     </script>
   </body>
