--- a/index.html
+++ b/index.html
@@ -29,13 +29,10 @@
         </ul>
       </div>
     </nav>
-    <div id="content">
-      <!-- alt inde i content er en template -->
-      <h1>{{pages[activePage].pageTitle}}</h1>
-      <p>{{pages[activePage].message}}</p>
-    </div>
+    <page-viewer :page="pages[activePage]" class="text-black"></page-viewer>
+
     <script>
-      Vue.createApp({
+      let app = Vue.createApp({
         data() {
           return {
             activePage: 0,
@@ -58,9 +55,18 @@
             ],
           };
         },
+      });
 
-        //   <!-- Denne webpage har to stykker information/data -->
-      }).mount("body");
+      app.component("page-viewer", {
+        props: ["page"],
+        template: `
+          <div>
+            <h1>{{page.pageTitle}}</h1>
+            <p>{{page.content}}</p>
+          </div>`,
+      });
+
+      app.mount("body");
       // <!-- Vi har mountet disse informationer på element med id content -->
     </script>
   </body>
